src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Class__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abatement Systems</fullName>
                </value>
                <value>
                    <fullName>Advanced Fuels</fullName>
                </value>
                <value>
                    <fullName>Advanced Reactors</fullName>
                </value>
                <value>
                    <fullName>Advanced Technology</fullName>
                </value>
                <value>
                    <fullName>Ancillary Equipment</fullName>
                </value>
                <value>
                    <fullName>Apprenticeship Programs</fullName>
                </value>
                <value>
                    <fullName>Assessment &amp; Consulting</fullName>
                </value>
                <value>
                    <fullName>Asset Management/Plant Life Extension</fullName>
                </value>
                <value>
                    <fullName>BOP Controls</fullName>
                </value>
                <value>
                    <fullName>Casing</fullName>
                </value>
                <value>
                    <fullName>Cells</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Compressors</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Construction, Design, and Installation</fullName>
                </value>
                <value>
                    <fullName>Construction/Installation</fullName>
                </value>
                <value>
                    <fullName>Construction Materials/Equipment</fullName>
                </value>
                <value>
                    <fullName>Construction Services</fullName>
                </value>
                <value>
                    <fullName>Contractors</fullName>
                </value>
                <value>
                    <fullName>Control Systems</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Corrosion Prevention and Services</fullName>
                </value>
                <value>
                    <fullName>Couplings</fullName>
                </value>
                <value>
                    <fullName>CSP Components</fullName>
                </value>
                <value>
                    <fullName>CSP Construction</fullName>
                </value>
                <value>
                    <fullName>CSP Design &amp; Engineering</fullName>
                </value>
                <value>
                    <fullName>CSP Legal &amp; Financial</fullName>
                </value>
                <value>
                    <fullName>CSP Operations</fullName>
                </value>
                <value>
                    <fullName>CSP Project Development</fullName>
                </value>
                <value>
                    <fullName>CSP Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Meteorological Information</fullName>
                </value>
                <value>
                    <fullName>Advanced Metering Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Advisory and Legal Support Services</fullName>
                </value>
                <value>
                    <fullName>Airborne Collision Avoidance Systems</fullName>
                </value>
                <value>
                    <fullName>Airport Accessibility</fullName>
                </value>
                <value>
                    <fullName>Airport Collaborative Decision Making (CDM)</fullName>
                </value>
                <value>
                    <fullName>Arrival/ Departure Management</fullName>
                </value>
                <value>
                    <fullName>Artificial Lift Systems</fullName>
                </value>
                <value>
                    <fullName>Automated Control Systems</fullName>
                </value>
                <value>
                    <fullName>Automation and Control</fullName>
                </value>
                <value>
                    <fullName>Automation Systems</fullName>
                </value>
                <value>
                    <fullName>Back-End Services</fullName>
                </value>
                <value>
                    <fullName>Batteries</fullName>
                </value>
                <value>
                    <fullName>Cargo Handling Equipment and Services</fullName>
                </value>
                <value>
                    <fullName>Cementing Products and Services</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Cleaners</fullName>
                </value>
                <value>
                    <fullName>Coatings</fullName>
                </value>
                <value>
                    <fullName>Communications Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Compressors</fullName>
                </value>
                <value>
                    <fullName>Compressors, Parts and Services</fullName>
                </value>
                <value>
                    <fullName>Computer Systems and Software</fullName>
                </value>
                <value>
                    <fullName>Connectors and Fittings</fullName>
                </value>
                <value>
                    <fullName>Construction, Manufacturing, and Temp. Housing</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Consumer Interface Technologies</fullName>
                </value>
                <value>
                    <fullName>Consumer Smart Grid Interface Technologies</fullName>
                </value>
                <value>
                    <fullName>Continuous Climb Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductOffering__c</fullName>
        <label>Product Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Offering</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shore__c</fullName>
        <label>Shore</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onshore</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statement_of_Work__c</fullName>
        <label>Statement of Work</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>